2001-08-08  Ulrich Drepper  <drepper@redhat.com>

	* libio/ioungetwc.c (ungetwc): Orient stream first.
	* libio/Makefile (tests): Add tst-ungetwc1.
	* libio/tst-ungetwc1.c: New file.

	* libio/wfileops.c (_IO_wfile_underflow): Remove incorrect test
	for possible conversion using __codecvt_do_in.
	* libio/Makefile (tests): Add tst-fgetws.
	* libio/tst-fgetws.c: New file.

	* libio/iofgetws.c: Use _IO_ferror_unlocked macros instead of
	coding the test here.

	* catgets/open_catalog.c: Rewrite code to assume that the function
	is called at catopen time and not delayed in catgets.
	* catgets/catgets.c (catopen): Call __open_catalog and fail if that
	function failed.
	(catgets): Remove code for delayed opening of catalog.
	* catgets/catgetsinfo.h: Remove now unnecessary information from
	struct catalog_info.  Change __open_catalog prototype.
	* catgets/gencat.c: Adjust __open_catalog call.
	* catgets/test-gencat.c: Stop program if catopen failed.

	* locale/C-monetary.c (_nl_C_LC_MONETARY): Provide correct value
	for CRNCYSTR.

	* locale/programs/ld-messages.c (messages_finish): Provide POSIX
	locale compliant default values for fields without definition.
	* locale/programs/ld-time.c (time_finish): Likewise.
	* locale/programs/ld-monetary.c (monetary_finish): Likewise.

2001-08-08  Andreas Jaeger  <aj@suse.de>

	* sysdeps/ieee754/ldbl-96/s_ilogbl.c (__ilogbl): Fix test for
	infinity.

2001-08-07  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/ia64/memusage.h (GETTIME): Define using hp-timing.h
	functionality.

	* sysdeps/ia64/hp-timing.h (HP_TIMING_NOW): Fix comment.

2001-08-07  Jakub Jelinek  <jakub@redhat.com>

	* malloc/memusage.c (initialized): New variable.
	(init): If not yet initialized, call me().
	(me): Do all dlsym calls here.
	(malloc, realloc, calloc, free): If not yet initialized,
	call me().  If in the middle of initializing, return NULL or
	do nothing.

2001-08-07  Jakub Jelinek  <jakub@redhat.com>
