@@ -1,4 +1,4 @@
-/* Copyright (C) 1993, 1995-1999, 2000 Free Software Foundation, Inc.
+/* Copyright (C) 1993, 1995-1999, 2000, 2001 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
    The GNU C Library is free software; you can redistribute it and/or
@@ -27,6 +27,7 @@
 
 #include "libioP.h"
 #include <errno.h>
+#include <stdlib.h>
 #include <shlib-compat.h>
 
 int
@@ -35,14 +36,19 @@ _IO_new_fgetpos (fp, posp)
      _IO_fpos_t *posp;
 {
   _IO_off_t pos;
+  int result = 0;
   CHECK_FILE (fp, EOF);
   _IO_cleanup_region_start ((void (*) __P ((void *))) _IO_funlockfile, fp);
   _IO_flockfile (fp);
   pos = _IO_seekoff (fp, 0, _IO_seek_cur, 0);
   if (_IO_in_backup (fp))
-    pos -= fp->_IO_save_end - fp->_IO_save_base;
-  _IO_funlockfile (fp);
-  _IO_cleanup_region_end (0);
+    {
+      if (fp->_vtable_offset != 0 || fp->_mode <= 0)
+	pos -= fp->_IO_save_end - fp->_IO_save_base;
+      else
+	/* XXX For now.  */
+	abort ();
+    }
   if (pos == _IO_pos_BAD)
     {
       /* ANSI explicitly requires setting errno to a positive value on
@@ -51,14 +57,20 @@ _IO_new_fgetpos (fp, posp)
       if (errno == 0)
 	__set_errno (EIO);
 #endif
-      return EOF;
+      result = EOF;
     }
-  posp->__pos = pos;
-  if (fp->_mode > 0
-      && (*fp->_codecvt->__codecvt_do_encoding) (fp->_codecvt) < 0)
-    /* This is a stateful encoding, safe the state.  */
-    posp->__state = fp->_wide_data->_IO_state;
-  return 0;
+  else
+    {
+      posp->__pos = pos;
+      if (fp->_mode > 0
+	  && (*fp->_codecvt->__codecvt_do_encoding) (fp->_codecvt) < 0)
+	/* This is a stateful encoding, safe the state.  */
+	posp->__state = fp->_wide_data->_IO_state;
+    }
+
+  _IO_funlockfile (fp);
+  _IO_cleanup_region_end (0);
+  return result;
 }
 
 strong_alias (_IO_new_fgetpos, __new_fgetpos)
